removed vavr